fixed bug where filters were not changing together, 1 filter value overrided the other | Also added a Saturation bar filter | Further adjusted spacing and layout of sliders

--- a/css/dress-up.scss
+++ b/css/dress-up.scss
@@ -166,16 +166,18 @@ form {
 
 /* Positions of the buttons on the grid */
 .color-section {
+	display: flex;
+	flex-direction: column;
 	font-size: 12px;
 	grid-area: base-right;
 	align-self: center;
-	width: min-content;
+	width: full;
 	color: white;
 	text-align: center;
-	margin-left: 3em;
+	margin: 0 2em;
 }
 input[type='range'] {
-	margin: 1em;
+	margin: 0.5em;
 }
 
 // Next Buttons
